# cutlass_HIP

./: CMakeLists.txt  latex.txt
examples/: CMakeLists.txt  utils.hpp
examples/01_full_kernel/: CMakeLists.txt  main.cpp
include/cute/: config.hpp
include/cute/arch/: mma_cdna2.hpp
include/cute/atom/: copy_atom.hpp  copy_traits.hpp  mma_atom.hpp  mma_traits_cdna2.hpp
include/cute/container/: cuda_types.hpp
include/cute/numeric/: numeric_types.hpp
include/cute/util/: debug.hpp
include/cutlass/: bfloat16.h  complex.h  cuda_host_adapter.hpp  device_kernel.h  float8.h  half.h  hip_bf16.h  kernel_hardware_info.h  workspace.h
include/cutlass/platform/: platform.h
python/cutlass/emit/: pytorch.py
test/unit/common/: cutlass_unit_test.h  filter_architecture.cpp
tools/profiler/include/cutlass/profiler/: cudnn_helpers.h  gpu_timer.h  options.h
tools/profiler/src/: cublas_helpers.cu
tools/util/include/cutlass/util/: GPU_Clock.hpp  command_line.h  cublas_wrappers.hpp  device_utils.h  exceptions.h  type_traits.h
